--- a/pages/ucenter/settings/index.wxml
+++ b/pages/ucenter/settings/index.wxml
@@ -1,9 +1,11 @@
 <view class="container">
     <view class='edit-container'>
-        <view class="a-item name">
+        <view class="a-item">
+            <image class="icon" src="/images/icon/receiver.png"></image>
             <input class='a-input' bindblur="bindinputName" placeholder='真实姓名' value="{{name}}"></input>
         </view>
-        <view class="a-item mobile">
+        <view class="a-item">
+            <image class="icon" src="/images/icon/mobile.png"></image>
             <input class='a-input' bindblur="mobilechange" value="{{mobile}}" placeholder='手机号码'></input>
         </view>
     </view>
