--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -360,14 +360,16 @@
 .section-nav {
     width: 100%;
     height: 100rpx;
-    padding-left: 24rpx;
+    padding: 0 24rpx;
     font-size: 30rpx;
     line-height: 100rpx;
     color: #233445;
     background: #fff;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
     margin: 24rpx 0;
+    box-sizing: border-box;
     /* border-bottom: 1rpx solid #eee; */
 }
 
@@ -376,10 +378,12 @@
     color: #333;
 }
 
-.arrow-right {
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/arrow-right.png) no-repeat 710rpx center;
-    background-size: 16rpx auto, 750rpx auto;
-    background-color: #fff;
+.arrow {
+    width: 10rpx;
+    height: 10rpx;
+    border-top: 4rpx solid #ccc;
+    border-right: 4rpx solid #ccc;
+    transform: rotate(45deg);
 }
 
 .details-wrap {
