--- a/pages/order-check/index.wxss
+++ b/pages/order-check/index.wxss
@@ -36,41 +36,25 @@ page {
     color: #666;
     padding: 24rpx;
     border-bottom: 1rpx solid #eee;
+    border-top: 1rpx solid #eee;
     background: #fff;
-    margin-top: 20rpx;
-}
-
-.top-line {
-    width: 100%;
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/addr-line.png) repeat-x top;
-    background-color: #fff;
-    background-size: 48rpx;
-    height: 10rpx;
 }
 
 .add-address {
     width: 100%;
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/arrow-right.png) no-repeat 710rpx center;
     background-color: #fff;
-    background-size: 16rpx auto;
-    padding-bottom: 20rpx;
+    padding: 24rpx;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
 }
 
 .addr-title {
-    line-height: 120rpx;
+    line-height: 80rpx;
     font-size: 28rpx;
     color: #666;
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/location.png) no-repeat left center;
-    background-size: 50rpx auto;
     margin-left: 24rpx;
-    padding-left: 60rpx;
-}
-
-.addr-block {
-    padding-bottom: 20rpx;
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/arrow-right.png) no-repeat 710rpx center;
-    background-color: #fff;
-    background-size: 16rpx auto;
 }
 
 .addr-wrap {
@@ -89,18 +73,33 @@ page {
 
 .show-address {
     width: 100%;
-    /* height: 120rpx; */
-    padding-left: 70rpx;
-    /* box-sizing: border-box; */
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/location.png) no-repeat left center;
-    background-size: 50rpx auto;
     margin-left: 24rpx;
 }
 
+.add-address .addr-icon{
+    max-width: 50rpx;
+    height: 50rpx;
+}
+
+.address-box .addr-r{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+
+.address-box .addr-r .arrow{
+    width: 10rpx;
+    height: 10rpx;
+    border-top: 4rpx solid #ccc;
+    border-right: 4rpx solid #ccc;
+    transform: rotate(45deg);
+}
 .show-address .name-tel {
     font-size: 30rpx;
     color: #233445;
-    padding: 22rpx 70rpx 6rpx 0;
+    padding: 6rpx 0rpx 6rpx 0;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -119,7 +118,6 @@ page {
 .show-address .addr-text {
     font-size: 26rpx;
     color: #666;
-    padding-right: 70rpx;
     /* text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden; */
@@ -145,10 +143,8 @@ page {
 
 .a-goods {
     display: flex;
-    padding: 24rpx 54rpx 24rpx 24rpx;
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/arrow-right.png) no-repeat 710rpx center;
+    padding: 24rpx;
     background-color: #fff;
-    background-size: 16rpx auto;
     justify-content: space-between;
 }
 
@@ -170,12 +166,28 @@ page {
     height: 100rpx;
     font-size: 26rpx;
     color: #666;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.goods-sum .text{
+    margin-right: 20rpx;
+}
+
+.goods-sum .arrow{
+    width: 10rpx;
+    height: 10rpx;
+    border-top: 4rpx solid #ccc;
+    border-right: 4rpx solid #ccc;
+    transform: rotate(45deg);
 }
 
 .price-check-wrap {
     background-color: #fff;
     padding: 0 0 0 24rpx;
     /* margin-left: 24rpx; */
+    margin-bottom: 24rpx;
 }
 
 .row-box {
@@ -230,15 +242,24 @@ page {
     color: #333;
 }
 
-.right-arrow {
-    background: url(http://lucky-icon.meiweiyuxian.com/hio/arrow-right.png) no-repeat 686rpx center;
-    background-size: 16rpx auto;
+.pay-list {
+    background-color: #fff;
+    padding: 30rpx 24rpx;
+    margin-bottom: 24rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.right-arrow .right-text {
-    margin-right: 30rpx;
-    color: #ff3456;
+.pay-list .list-title{
+    font-size: 28rpx;
 }
+
+.pay-list .radio{
+    font-size: 26rpx;
+    margin-left: 20rpx;
+}
+
 
 .bottom-box {
     display: flex;
