--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,9 +1,9 @@
 <scroll-view class="container" style="height: 100%;">
     <view class="search-header">
         <view class="input-box">
-            <image class="icon-search"></image>
+            <image class="icon-search" src="/images/icon/search.png"></image>
             <input name="input" class="keywrod" focus="true" value="{{keyword}}" confirm-type="search" bindinput="inputChange" bindfocus="inputFocus" bindconfirm="onKeywordConfirm" confirm-type="search" placeholder="{{defaultKeyword.keyword}}" />
-            <image class="del" wx:if="{{keyword}}" bindtap="clearKeyword"></image>
+            <image src="/images/icon/search-dele.png" class="del" wx:if="{{keyword}}" bindtap="clearKeyword"></image>
         </view>
         <view class="right" bindtap="closeSearch">取消</view>
     </view>
@@ -11,7 +11,7 @@
         <view class="serach-keywords search-history" wx:if="{{!keyword  && historyKeyword.length}}">
             <view class="h">
                 <text class="title">历史记录</text>
-                <image class="icon" bindtap="clearHistory"></image>
+                <image src="/images/icon/trash-9.png" class="icon" bindtap="clearHistory"></image>
             </view>
             <view class="b">
                 <view class="item" bindtap="onKeywordTap" data-keyword="{{item}}" wx:for="{{historyKeyword}}" hover-class="navigator-hover" wx:key="id">{{item}}</view>
@@ -34,13 +34,23 @@
         <view class="sort">
             <view class="sort-box">
                 <view class="item {{currentSortType == 'default' ? 'active' : ''}}" bindtap="openSortFilter" id="defaultSort">
-                    <text class="txt">综合</text>
+                    <view class="txt">综合</view>
                 </view>
-                <view class="item by-price {{currentSortType == 'price' ? 'active' : ''}} {{currentSortOrder == 'asc'  ? 'asc' : 'desc'}}" bindtap="openSortFilter" id="priceSort">
-                    <text class="txt">价格</text>
+                <view class="item {{currentSortType == 'price' ? 'active' : ''}}" bindtap="openSortFilter" id="priceSort">
+                    <view class="txt">价格</view>
+                    <image class="icon" src="/images/icon/order-by.png" wx:if="{{currentSortType == 'default' || currentSortType == 'sales'}}"></image>
+                    <block wx:else>
+                        <image class="icon" wx:if="{{currentSortOrder == 'asc'}}" src='/images/icon/asc.png'></image>
+                        <image class="icon" wx:elif="{{currentSortOrder == 'desc'}}" src='/images/icon/desc.png'></image>
+                    </block>
                 </view>
-                <view class="item by-sales {{currentSortType == 'sales' ? 'active' : ''}} {{salesSortOrder == 'asc'  ? 'asc' : 'desc'}}" bindtap="openSortFilter" id="salesSort">
-                    <text class="txt">销量</text>
+                <view class="item {{currentSortType == 'sales' ? 'active' : ''}}" bindtap="openSortFilter" id="salesSort">
+                    <view class="txt">销量</view>
+                    <image class="icon" src="/images/icon/order-by.png" wx:if="{{currentSortType == 'default' || currentSortType == 'price'}}"></image>
+                    <block wx:else>
+                        <image class="icon" wx:if="{{salesSortOrder == 'asc'}}" src='/images/icon/asc.png'></image>
+                        <image class="icon" wx:elif="{{salesSortOrder == 'desc'}}" src='/images/icon/desc.png'></image>
+                    </block>
                 </view>
             </view>
         </view>
@@ -56,7 +66,7 @@
                                 <block wx:if="{{iitem.goods_number == 0}}">
                                     <!-- <view class='no-goods-mask'></view> -->
                                     <view class='sold-img'>
-                                        <image class='soldout' src='http://lucky-icon.meiweiyuxian.com/hio/sold-out.png'></image>
+                                        <image class='soldout' src='/images/icon/sold-out.png'></image>
                                     </view>
                                 </block>
                             </view>
@@ -78,7 +88,7 @@
     </view>
 
     <view class="search-result-empty" wx:if="{{!goodsList.length && searchStatus}}">
-        <image class="icon"></image>
+        <image class="icon" src="/images/icon/no-search.png"></image>
         <text class="text">没找到，换个关键字试试</text>
     </view>
 </scroll-view>
