本地没有支付时，提供一个提交订单直接支付的模拟支付方法 补上一个图标 优化加入购物车连续点，提交订单多次点的问题

--- a/pages/order-check/index.wxml
+++ b/pages/order-check/index.wxml
@@ -28,7 +28,7 @@
 			<view class="a-goods">
 				<view class="img-box">
 					<view class='image-wrap' wx:for="{{checkedGoodsList}}" wx:if="{{index<5}}" wx:key="id">
-						<image src="{{item.list_pic_url}}" class="goods-image"></image>
+						<image wx:if="{{item.number > 0 && item.is_on_sale == 1}}" src="{{item.list_pic_url}}" class="goods-image"></image>
 					</view>
 				</view>
 				<view class='goods-sum'>
