商品详情改为直接加载

--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -13,7 +13,7 @@
             </view>
         </view>
         <block wx:if="{{gallery.length > 0}}">
-            <swiper bindchange="bindchange" class="banner banner-style1" indicator-dots="{{false}}" autoplay="{{autoplay}}" current="{{current}}" circular="{{true}}" interval="3000" duration="1000" display-multiple-items="1">
+            <swiper bindchange="bindchange" class="banner banner-style1" indicator-dots="{{false}}" autoplay="{{false}}" current="{{current}}" circular="{{true}}" interval="3000" duration="1000" display-multiple-items="1">
                 <swiper-item class="item" wx:for="{{gallery}}" wx:key="id">
                     <image bindtap="previewImage" data-src="{{item.img_url}}" src="{{item.img_url}}" class="slide-image" mode="aspectFill" />
                 </swiper-item>
@@ -55,10 +55,8 @@
     </view>
     <view class='details-wrap'>
         <view class="title">商品详情</view>
-        <!-- <ad unit-id="adunit-abf12db5663f60e0" ad-type="video" ad-theme="white"></ad> -->
         <view class="show">
             <view class='details-image-wrap'>
-                <view class='show-detail' bindtap='getDetailInfo' wx:if="{{is_show == 0}}">点击显示详情</view>
                 <import src="../../lib/wxParse/wxParse.wxml" />
                 <template is="wxParse" data="{{wxParseData:goodsDetail.nodes}}" />
             </view>
